Nearing deadline commit

--- a/report/Appendix.tex
+++ b/report/Appendix.tex
@@ -1,2 +1,7 @@
-\appendix
-\chapter{First Appendix}
+\section{Appendix}
+\section*{Appendix A: How to run}
+To run the project only one tool is required, Simple Build Tool. SBT can be downloaded and installed from \href{http://www.scala-sbt.org/}{http://www.scala-sbt.org/}
+
+When sbt is installed you need to navigate to the project folder containing ``build.sbt'' and run ``sbt''. This will download all dependencies and start the sbt console. 
+
+Simply type ``run'' here to compile and start the application. There are two main files within the applications that you can start, the Server and Client for the secure chat application.
