--- a/report/head.tex
+++ b/report/head.tex
@@ -49,6 +49,11 @@
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
+\lstset{emph={%  
+    val, sends, gotoStep, receives, forall, =>,branchOn, next%
+    },emphstyle={\color{blue}}%
+}%
+%validate: String => Either[ValidationError, Any]
 \lstdefinestyle{myScalastyle}{
   frame=tb,
   language=scala,
@@ -94,8 +99,7 @@
     urlcolor=black
 }
 \graphicspath{ {images/} }
-% Plotting
-%\usepackage{pgfplots}
+
 \renewcommand{\baselinestretch}{1.1}
 
 
@@ -211,9 +215,7 @@ Dr. Edwin \textsc{Brady} % Supervisor's Name
 % Conclusion
 \include{Conclusion}
 %Bibliography
-%\appendix
-%\chapter{1}
-%\chapter{2}
+\include{Appendix}
 \include{Bibliography}
 
 \end{document}
